--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,10 @@
     "overrides": [
     ],
     "parserOptions": {
-        "ecmaVersion": "latest"
+        "ecmaVersion": "latest",
+        "sourceType": "module",
+        "allowImportExportEverywhere": true
+    
     },
     "rules": {
     }
